# magnum

./: .gitignore  CMakeLists.txt  MyApplication.cpp  TriangleExample.cpp
